# Enter-The-Unknown

./: .gitignore  CMakeLists.txt  Enter-The-Unknown.cbp  Enter-The-Unknown.depend  Enter-The-Unknown.layout  Enter-The-Unknown.sublime-project  Enter-The-Unknown.sublime-workspace  Enter-the-Unknown.sublime-project  README.md  callgrind.out.25057  compile.sh  count.sh  lines.txt  main.cpp
config/: input.json
data/: zone.json
data/enemies/: basic.json
data/enemies/basic/: basic-palette.ase  basic.ase  basic.json
data/floors/: testfloor.json
data/floors/testfloor/: testfloor.json
data/pickups/life/: life.json
data/player/: player.json
data/players/dimitri/: dimitri.json
img/: button.ase  playerCombat.ase
include/: Application.hpp  Debug.h  Floor.hpp  GameObject.hpp  Player.hpp  TileMap.hpp  World.hpp  WorldData.hpp
include/Components/: AnimationComponent.hpp  Component.hpp  GraphicsComponent.hpp  MovementComponent.hpp  PhysicsComponent.hpp  PlayerInputMovementComponent.hpp
include/Editor/: FloorEditor.hpp
include/Entities/: Enemy.hpp  Entity.hpp  GameObject.hpp  Obstacle.hpp  RunningEntity.hpp
include/Factories/: EntityFactory.hpp  FloorFactory.hpp
include/GUI/: Button.hpp  Component.hpp
include/Loaders/: EntityLoader.hpp  FloorLoader.hpp  InputLoader.hpp
include/Resource/: ResourceManager.hpp  Resources.hpp
include/SceneNode/: SceneNode.hpp
include/States/: FloorEditorState.hpp  GameState.hpp  State.hpp  StateID.hpp  StateStack.hpp  TitleState.hpp
include/Utils/: EnemyLoader.hpp  EntityLoader.hpp  FloorLoader.hpp  JsonParser.hpp  Utility.hpp
old/: Entity.cpp  Entity.hpp  Floor.hpp  GameObject.cpp  Player.cpp
src/: Airstrike.sublime-project  Airstrike.sublime-workspace  Application.cpp  Floor.cpp  GameObject.cpp  Player.cpp  TileMap.cpp  World.cpp  WorldData.cpp
src/Components/: GraphicsComponent.cpp  MovementComponent.cpp  PhysicsComponent.cpp  PlayerInputMovementComponent.cpp
src/Editor/: FloorEditor.cpp
src/Entities/: Enemy.cpp  Entity.cpp  Obstacle.cpp  RunningEntity.cpp
src/GUI/: Button.cpp  Component.cpp
src/Loaders/: EntityLoader.cpp  FloorLoader.cpp  InputLoader.cpp
src/SceneNode/: SceneNode.cpp
src/States/: FloorEditorState.cpp  GameState.cpp  State.cpp  StateStack.cpp  TitleState.cpp
src/Utils/: EnemyLoader.cpp  EntityLoader.cpp  FloorLoader.cpp  JsonParser.cpp
tests/: enemyloading.cpp  enemyloading.out  enemyloading.sh
(+3 files in other folders)
